# saritasa-invocations

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tasks.py  versions.json
.github/: CODEOWNERS  settings.yaml
.github/workflows/: checks.yml  publish.yaml  publish.yml  run_pre_commit.yaml
1.12.0/: 404.html  index.html  sitemap.xml
1.12.0/changelog/: index.html
1.12.0/contributing/: index.html
1.12.0/reference/alembic/: index.html
1.12.0/reference/celery/: index.html
1.12.0/reference/config/: index.html
1.12.0/reference/cruft/: index.html
1.12.0/reference/db/: index.html
1.12.0/reference/db_k8s/: index.html
1.12.0/reference/django/: index.html
1.12.0/reference/docker/: index.html
1.12.0/reference/fastapi/: index.html
1.12.0/reference/git/: index.html
1.12.0/reference/github_actions/: index.html
1.12.0/reference/k8s/: index.html
1.12.0/reference/mypy/: index.html
1.12.0/reference/open_api/: index.html
1.12.0/reference/pip/: index.html
1.12.0/reference/poetry/: index.html
1.12.0/reference/pre_commit/: index.html
1.12.0/reference/printing/: index.html
1.12.0/reference/pytest/: index.html
1.12.0/reference/python/: index.html
1.12.0/reference/secrets/: index.html
1.12.0/reference/system/: index.html
1.12.0/reference/uv/: index.html
1.12.0/search/: search_index.json
1.12.1/: 404.html  index.html  sitemap.xml
1.12.1/changelog/: index.html
1.12.1/contributing/: index.html
1.12.1/reference/alembic/: index.html
1.12.1/reference/celery/: index.html
1.12.1/reference/config/: index.html
1.12.1/reference/cruft/: index.html
1.12.1/reference/db/: index.html
1.12.1/reference/db_k8s/: index.html
1.12.1/reference/django/: index.html
1.12.1/reference/docker/: index.html
1.12.1/reference/fastapi/: index.html
1.12.1/reference/git/: index.html
1.12.1/reference/github_actions/: index.html
1.12.1/reference/k8s/: index.html
1.12.1/reference/mypy/: index.html
1.12.1/reference/open_api/: index.html
1.12.1/reference/pip/: index.html
1.12.1/reference/poetry/: index.html
1.12.1/reference/pre_commit/: index.html
1.12.1/reference/printing/: index.html
1.12.1/reference/pytest/: index.html
1.12.1/reference/python/: index.html
1.12.1/reference/secrets/: index.html
1.12.1/reference/system/: index.html
1.12.1/reference/uv/: index.html
1.12.1/search/: search_index.json
docs/reference/: alembic.md  celery.md  config.md  cruft.md  db.md  db_k8s.md  django.md  docker.md  fastapi.md  git.md  github_actions.md  k8s.md  mypy.md  open_api.md  pip.md  poetry.md  pre_commit.md  printing.md  pytest.md  python.md  secrets.md  system.md  uv.md
invocations/: ci.py  docs.py  project.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/changelog/: index.html
latest/contributing/: index.html
latest/reference/alembic/: index.html
latest/reference/celery/: index.html
latest/reference/config/: index.html
latest/reference/cruft/: index.html
latest/reference/db/: index.html
latest/reference/db_k8s/: index.html
latest/reference/django/: index.html
latest/reference/docker/: index.html
latest/reference/fastapi/: index.html
latest/reference/git/: index.html
latest/reference/github_actions/: index.html
latest/reference/k8s/: index.html
latest/reference/mypy/: index.html
latest/reference/open_api/: index.html
latest/reference/pip/: index.html
latest/reference/poetry/: index.html
latest/reference/pre_commit/: index.html
latest/reference/printing/: index.html
latest/reference/pytest/: index.html
latest/reference/python/: index.html
latest/reference/secrets/: index.html
latest/reference/system/: index.html
latest/reference/uv/: index.html
latest/search/: search_index.json
saritasa_invocations/: __init__.py  _config.py  alembic.py  celery.py  cruft.py  db.py  db_k8s.py  django.py  docker.py  fastapi.py  git.py  github_actions.py  k8s.py  mypy.py  open_api.py  pip.py  poetry.py  pre_commit.py  printing.py  pytest.py  python.py  secrets.py  system.py  uv.py
